# toomanysettings

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.circleci/: config.yml
tests/unit/: test_settings.py
toomanysettings/: __init__.py
